Initial Unity Migration

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@
 /android/
 env
 env/
+UnityVersion/PlaneIdler/Library
+UnityVersion/PlaneIdler/Temp
+UnityVersion/PlaneIdler/Logs
+UnityVersion/PlaneIdler/Library/
+UnityVersion/PlaneIdler/Temp/
+UnityVersion/PlaneIdler/Logs/
